--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,16 +1,11 @@
-<div class="h-screen flex flex-col">
-  <header class="bg-teal-600 text-white">
-    <nav class="h-full max-w-5xl mx-auto p-2 flex gap-4">
-      <h1 class="my-auto flex gap-2 text-3xl font-bold font-heading">
-        <img class="h-9" src="/assets/logo-white.svg" alt="logo">
-        Weather
-      </h1>
-    </nav>
-  </header>
-  <div class="flex-auto p-4" relative>
-    <div class="flex flex-col align-items-center max-w-5xl mx-auto h-full">
-      <app-weather *ngIf="longitude && latitude" [longitude]="longitude" [latitude]="latitude"></app-weather>
-    </div>
-  </div>
+<header class="bg-teal-600 text-white">
+  <nav class="max-w-5xl mx-auto p-2">
+    <h1 class="my-auto flex gap-2 text-3xl font-bold font-heading">
+      <img class="h-9" src="/assets/logo-white.svg" alt="logo">
+      Weather
+    </h1>
+  </nav>
+</header>
+<div class="max-w-5xl mx-auto p-4">
+  <app-weather *ngIf="longitude && latitude" [longitude]="longitude" [latitude]="latitude"></app-weather>
 </div>
-
