Remove duplicate code

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -9,7 +9,7 @@
       <type-ahead
         placeholder="Location" 
         [values]="typeAheadValues"
-        (click)="changeLocation($event)"
+        (click)="typeAheadClicked($event)"
       ></type-ahead>
     </div>
   </nav>
