Put simple ui in place

--- a/ui/src/app/weather/weather.component.html
+++ b/ui/src/app/weather/weather.component.html
@@ -1,3 +1,9 @@
-<div>Longitude: {{longitude}}</div>
-<div>Latitude: {{latitude}}</div>
-<div *ngIf="(currentWeather$ | async) as currentWeather">{{ currentWeather.data | json }}</div>
+<div class="w-full">
+  <div  *ngIf="(currentWeather$ | async) as currentWeather" class="mx-auto max-w-sm rounded overflow-hidden shadow-lg">
+    <div class="px-6 py-4">
+      <div class="mb-2 font-bold text-xl text-center">{{currentWeather.data.currentWeather.name}}</div>
+      <img class="mx-auto" [src]="currentWeather.data.currentWeather.iconUrl">
+      <div class="mb-2 text-center">{{currentWeather.data.currentWeather.actualTemperature}}℉</div>
+    </div>
+  </div>
+</div>
