--- a/ui/src/app/weather/weather.component.html
+++ b/ui/src/app/weather/weather.component.html
@@ -1,9 +1,18 @@
-<div class="w-full">
-  <div  *ngIf="(currentWeather$ | async) as currentWeather" class="mx-auto max-w-sm rounded overflow-hidden shadow-lg">
+<div *ngIf="(weatherForecast$ | async) as weatherForecast" class="w-full">
+  <div class="mx-auto w-full mb-2 text-white font-bold">
     <div class="px-6 py-4">
-      <div class="mb-2 font-bold text-xl text-center">{{currentWeather.data.currentWeather.name}}</div>
-      <img class="mx-auto" [src]="currentWeather.data.currentWeather.iconUrl">
-      <div class="mb-2 text-center">{{currentWeather.data.currentWeather.actualTemperature}}℉</div>
+      <div class="text-xl text-center">{{weatherForecast.data.currentWeather.name}}</div>
+      <div class="text-4xl text-center">{{weatherForecast.data.currentWeather.actualTemperature | number:'1.0-0'}}℉</div>
+      <div class="text-md text-center">{{weatherForecast.data.currentWeather.description}}</div>
     </div>
   </div>
+  <app-card title="Forecast" class="mb-2">
+    <div class="flex gap-4 overflow-auto">
+      <div *ngFor="let forecastItem of weatherForecast.data.forecast" class="flex-none">
+        <div class="font-bold text-center">{{forecastItem.timestamp | date:'h aaa'}}</div>
+        <img class="mx-auto" style="height: 60px; width: 60px;" [src]="forecastItem.iconUrl">
+        <div class="text-center">{{forecastItem.actualTemperature | number:'1.0-0'}}℉</div>
+      </div>
+    </div>
+  </app-card>
 </div>
