--- a/ui/src/app/weather/weather.component.html
+++ b/ui/src/app/weather/weather.component.html
@@ -2,17 +2,57 @@
   <div class="mx-auto w-full mb-2 text-white font-bold">
     <div class="px-6 py-4">
       <div class="text-xl text-center">{{weatherForecast.data.currentWeather.name}}</div>
-      <div class="text-4xl text-center">{{weatherForecast.data.currentWeather.actualTemperature | number:'1.0-0'}}℉</div>
-      <div class="text-md text-center">{{weatherForecast.data.currentWeather.description}}</div>
+      <div class="text-4xl text-center">{{weatherForecast.data.currentWeather.actualTemperature | number:'1.0-0'}}℉
+      </div>
+      <div class="text-md text-center">{{weatherForecast.data.currentWeather.description | titlecase}}</div>
+      <div class="text-md text-center">H: {{weatherForecast.data.currentWeather.highTemperature | number:'1.0-0'}}℉ L:
+        {{weatherForecast.data.currentWeather.lowTemperature | number:'1.0-0'}}℉</div>
     </div>
   </div>
-  <app-card title="Forecast" class="mb-2">
-    <div class="flex gap-4 overflow-auto">
-      <div *ngFor="let forecastItem of weatherForecast.data.forecast" class="flex-none">
-        <div class="font-bold text-center">{{forecastItem.timestamp | date:'h aaa'}}</div>
-        <img class="mx-auto" style="height: 60px; width: 60px;" [src]="forecastItem.iconUrl">
-        <div class="text-center">{{forecastItem.actualTemperature | number:'1.0-0'}}℉</div>
+  <div class="flex flex-col gap-2">
+    <app-card title="Forecast" class="mb-2">
+      <div class="flex gap-4 overflow-auto">
+        <div *ngFor="let forecastItem of weatherForecast.data.forecast" class="flex-none">
+          <div class="font-bold text-center">{{forecastItem.timestamp | date:'h aaa'}}</div>
+          <img class="mx-auto" style="height: 60px; width: 60px;" [src]="forecastItem.iconUrl"
+            [alt]="forecastItem.description">
+          <div class="text-center">{{forecastItem.actualTemperature | number:'1.0-0'}}℉</div>
+        </div>
+      </div>
+    </app-card>
+    <div class="flex flex-wrap gap-2">
+      <div class="flex-auto">
+        <app-card title="Wind" class="mb-2">
+          <div class="flex gap-4 overflow-auto">
+            <div class="text-center">{{weatherForecast.data.currentWeather.wind.speed | number:'1.0-0'}} mph
+            </div>
+          </div>
+        </app-card>
+      </div>
+      <div class="flex-auto">
+        <app-card title="Feels Like" class="mb-2">
+          <div class="flex gap-4 overflow-auto">
+            <div class="text-center">{{weatherForecast.data.currentWeather.feelsLikeTemperature | number:'1.0-0'}}℉
+            </div>
+          </div>
+        </app-card>
+      </div>
+      <div class="flex-auto">
+        <app-card title="Humidity" class="mb-2">
+          <div class="flex gap-4 overflow-auto">
+            <div class="text-center">{{weatherForecast.data.currentWeather.humidity | number:'1.0-0'}}%
+            </div>
+          </div>
+        </app-card>
+      </div>
+      <div class="flex-auto">
+        <app-card title="Pressure" class="mb-2">
+          <div class="flex gap-4 overflow-auto">
+            <div class="text-center">{{weatherForecast.data.currentWeather.pressure | number:'1.0-0'}} hPa
+            </div>
+          </div>
+        </app-card>
       </div>
     </div>
-  </app-card>
+  </div>
 </div>
