--- a/ui/src/app/weather/weather.component.html
+++ b/ui/src/app/weather/weather.component.html
@@ -9,9 +9,9 @@
         {{weatherForecast.data.currentWeather.lowTemperature | number:'1.0-0'}}℉</div>
     </div>
   </div>
-  <div class="flex flex-col gap-2">
-    <app-card title="Forecast" class="mb-2">
-      <div class="flex gap-4 overflow-auto">
+  <div class="flex flex-col gap-4">
+    <app-card title="Forecast">
+      <div class="flex gap-2 overflow-auto">
         <div *ngFor="let forecastItem of weatherForecast.data.forecast" class="flex-none">
           <div class="font-bold text-center">{{forecastItem.timestamp | date:'h aaa'}}</div>
           <img class="mx-auto" style="height: 60px; width: 60px;" [src]="forecastItem.iconUrl"
@@ -20,39 +20,27 @@
         </div>
       </div>
     </app-card>
-    <div class="flex flex-wrap gap-2">
-      <div class="flex-auto">
-        <app-card title="Wind" class="mb-2">
-          <div class="flex gap-4 overflow-auto">
-            <div class="text-center">{{weatherForecast.data.currentWeather.wind.speed | number:'1.0-0'}} mph
-            </div>
-          </div>
-        </app-card>
-      </div>
-      <div class="flex-auto">
-        <app-card title="Feels Like" class="mb-2">
-          <div class="flex gap-4 overflow-auto">
-            <div class="text-center">{{weatherForecast.data.currentWeather.feelsLikeTemperature | number:'1.0-0'}}℉
-            </div>
-          </div>
-        </app-card>
-      </div>
-      <div class="flex-auto">
-        <app-card title="Humidity" class="mb-2">
-          <div class="flex gap-4 overflow-auto">
-            <div class="text-center">{{weatherForecast.data.currentWeather.humidity | number:'1.0-0'}}%
-            </div>
-          </div>
-        </app-card>
-      </div>
-      <div class="flex-auto">
-        <app-card title="Pressure" class="mb-2">
-          <div class="flex gap-4 overflow-auto">
-            <div class="text-center">{{weatherForecast.data.currentWeather.pressure | number:'1.0-0'}} hPa
-            </div>
-          </div>
-        </app-card>
-      </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+      <app-card title="Wind">
+        <div class="flex gap-4 overflow-auto">
+          <div class="text-center">{{weatherForecast.data.currentWeather.wind.speed | number:'1.0-0'}} mph</div>
+        </div>
+      </app-card>
+      <app-card title="Feels Like">
+        <div class="flex gap-4 overflow-auto">
+          <div class="text-center">{{weatherForecast.data.currentWeather.feelsLikeTemperature | number:'1.0-0'}}℉</div>
+        </div>
+      </app-card>
+      <app-card title="Humidity">
+        <div class="flex gap-4 overflow-auto">
+          <div class="text-center">{{weatherForecast.data.currentWeather.humidity | number:'1.0-0'}}%</div>
+        </div>
+      </app-card>
+      <app-card title="Pressure">
+        <div class="flex gap-4 overflow-auto">
+          <div class="text-center">{{weatherForecast.data.currentWeather.pressure | number:'1.0-0'}} hPa</div>
+        </div>
+      </app-card>
     </div>
   </div>
 </div>
