Remove dark theme

--- a/ui/src/app/type-ahead/type-ahead.component.html
+++ b/ui/src/app/type-ahead/type-ahead.component.html
@@ -1,10 +1,10 @@
 <div class="relative">
-  <input type="text" [placeholder]="placeholder" [(ngModel)]="searchTerm" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-  <div *ngIf="searchTerm" class="absolute mt-1 z-10 bg-green-200 left-0 right-0 z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-    <ul class="text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
+  <input type="text" [placeholder]="placeholder" [(ngModel)]="searchTerm" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500">
+  <div *ngIf="searchTerm" class="absolute mt-1 z-10 bg-green-200 left-0 right-0 z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+    <ul class="text-sm text-gray-700" aria-labelledby="dropdown-button">
       <li *ngFor="let item of filteredValues()">
         <button 
-          class="block w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white text-left"
+          class="block w-full px-4 py-2 hover:bg-gray-100 text-left"
           (click)="onClick(item)"
         >
           {{item.displayValue}}
