--- a/ui/src/app/weather/weather.component.html
+++ b/ui/src/app/weather/weather.component.html
@@ -5,12 +5,15 @@
       <div class="text-4xl text-center">{{weatherForecast.data.currentWeather.actualTemperature | number:'1.0-0'}}℉
       </div>
       <div class="text-md text-center">{{weatherForecast.data.currentWeather.description | titlecase}}</div>
-      <div class="text-md text-center">H: {{weatherForecast.data.currentWeather.highTemperature | number:'1.0-0'}}℉ L:
-        {{weatherForecast.data.currentWeather.lowTemperature | number:'1.0-0'}}℉</div>
+      <div class="text-md text-center">
+        <span>H: {{weatherForecast.data.currentWeather.highTemperature | number:'1.0-0'}}℉</span>
+        <span>&nbsp;&nbsp;&nbsp;</span>
+        <span>L: {{weatherForecast.data.currentWeather.lowTemperature | number:'1.0-0'}}℉</span>
+      </div>
     </div>
   </div>
-  <div class="flex flex-col gap-4">
-    <app-card title="Forecast">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+    <app-card title="Forecast" class="col-span-1 sm:col-span-2 md:col-span-4">
       <div class="flex gap-2 overflow-auto">
         <div *ngFor="let forecastItem of weatherForecast.data.forecast" class="flex-none">
           <div class="font-bold text-center">{{forecastItem.timestamp | date:'h aaa'}}</div>
@@ -20,27 +23,25 @@
         </div>
       </div>
     </app-card>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
-      <app-card title="Wind">
-        <div class="flex gap-4 overflow-auto">
-          <div class="text-center">{{weatherForecast.data.currentWeather.wind.speed | number:'1.0-0'}} mph</div>
-        </div>
-      </app-card>
-      <app-card title="Feels Like">
-        <div class="flex gap-4 overflow-auto">
-          <div class="text-center">{{weatherForecast.data.currentWeather.feelsLikeTemperature | number:'1.0-0'}}℉</div>
-        </div>
-      </app-card>
-      <app-card title="Humidity">
-        <div class="flex gap-4 overflow-auto">
-          <div class="text-center">{{weatherForecast.data.currentWeather.humidity | number:'1.0-0'}}%</div>
-        </div>
-      </app-card>
-      <app-card title="Pressure">
-        <div class="flex gap-4 overflow-auto">
-          <div class="text-center">{{weatherForecast.data.currentWeather.pressure | number:'1.0-0'}} hPa</div>
-        </div>
-      </app-card>
-    </div>
+    <app-card title="Wind">
+      <div class="flex gap-4 overflow-auto">
+        <div class="text-center">{{weatherForecast.data.currentWeather.wind.speed | number:'1.0-0'}} mph</div>
+      </div>
+    </app-card>
+    <app-card title="Feels Like">
+      <div class="flex gap-4 overflow-auto">
+        <div class="text-center">{{weatherForecast.data.currentWeather.feelsLikeTemperature | number:'1.0-0'}}℉</div>
+      </div>
+    </app-card>
+    <app-card title="Humidity">
+      <div class="flex gap-4 overflow-auto">
+        <div class="text-center">{{weatherForecast.data.currentWeather.humidity | number:'1.0-0'}}%</div>
+      </div>
+    </app-card>
+    <app-card title="Pressure">
+      <div class="flex gap-4 overflow-auto">
+        <div class="text-center">{{weatherForecast.data.currentWeather.pressure | number:'1.0-0'}} hPa</div>
+      </div>
+    </app-card>
   </div>
 </div>
