--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,5 @@
-<header class="bg-teal-600 text-white">
+<div class="w-full h-full min-h-screen flex flex-col">
+<header class="flex-initial bg-teal-600 text-white">
   <nav class="max-w-5xl mx-auto p-2 flex">
     <h1 class="my-auto flex gap-2 text-3xl font-bold font-heading">
       <img class="h-9" src="/assets/logo-white.svg" alt="logo">
@@ -14,8 +15,9 @@
     </div>
   </nav>
 </header>
-<div class="w-full h-full min-h-screen bg-gradient-to-b from-green-400 to-blue-500">
+<div class="flex-auto bg-gradient-to-b from-green-400 to-blue-500">
   <div class="max-w-5xl mx-auto p-4">
     <app-weather *ngIf="longitude && latitude" [longitude]="longitude" [latitude]="latitude"></app-weather>
   </div>
+</div>
 </div>
