Update card style

--- a/ui/src/app/card/card.component.html
+++ b/ui/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="w-full bg-white shadow-lg rounded-md border border-gray-200 bg-opacity-20 border-opacity-20">
+<div class="w-full bg-white shadow-lg rounded-3xl border border-gray-200 bg-opacity-20 border-opacity-20">
   <header class="px-5 py-4 border-b border-gray-100 border-opacity-20">
     <h2 class="font-semibold text-gray-800">{{title}}</h2>
   </header>
